DATE        AUTHOR      CHANGE
---------- -----------  -------------------------------------------------------
NOTE: Odd numbered minor versions are development series (ex: 0.1, 0.9, etc)

2006-06-06 dshipton     Version out includes and library
                        VERSION: 0.7.4
2006-06-05 allenb       Refactored the build system to remove AutoDist.
2006-06-02 dshipton     Install .pc file for pkg-config use
                        VERSION: 0.7.3
2006-02-07 allenb       Refactored the Attributes class to just be an std::map
                        of strings to attributes.
                        Added an attrib() method to Node that returns this map.
                        VERSION: 0.7.2
2006-05-06 allenb       Added ability to set options in OptionRepository.
                        Added saveOptionFile to OptionRepository.
                        Refactored OptionRepository to hold onto Doc node.
                        cppdom::Error now derived from std::exception
                        VERSION: 0.7.1
                        
[Version 0.6.0 released - 6.1.2005]============================================
2005-02-06 allenb       Added hasOption() method to OptionRepository
                        VERSION: 0.5.6
2005-02-04 allenb       Added ability to get children by path.
                        Added extension to assist with using xml files
                        as configuration files.  See: ext/OptionRepository.h
                        VERSION: 0.5.5
2005-02-03 allenb       Added tests for Node interface.
                        Added Node::hasChild() method.
                        VERSION: 0.5.4
2004-04-14 allenb       Added ability to make distribution as part of build.
                        VERSION: 0.5.3
2004-04-14 allenb       Migrated build system to use AutoDist.
                        VERSION: 0.5.2
2004-04-13 allenb       Refactoring build system to use scons-addons
                        VERSION: 0.5.1