@@ -2,6 +2,9 @@ DATE        AUTHOR      CHANGE
 ---------- -----------  -------------------------------------------------------
 NOTE: Odd numbered minor versions are development series (ex: 0.1, 0.9, etc)
 
+2006-06-13 allenb       Fixed bug in how NodePtr and DocumentPtr types were
+                        defined.  Now explicitly declare Node and Document.
+                        VERSION: 0.7.5
 2006-06-06 dshipton     Version out includes and library
                         VERSION: 0.7.4
 2006-06-05 allenb       Refactored the build system to remove AutoDist.
